<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/edit_profil"
            android:textColor="@color/colorBorder"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedlayout"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgprofil"
                android:layout_width="100dp"
                android:layout_marginTop="10dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_account" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ganti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/greenmid"
                    android:text="@string/ganti"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/pembatas"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/hapus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="#FF0000"
                    android:text="@string/hapus"
                    android:textSize="15sp" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:hint="@string/password"
                android:textSize="15sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="@string/username"
                android:textSize="15sp" />
            <Spinner
                android:id="@+id/propuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:entries="@array/proparray"
                android:layout_marginTop="10dp" />
            <Spinner
                android:id="@+id/kotauser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <EditText
                android:id="@+id/tanggal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="Date"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imgbtn"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_action_name"/>

    </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="Alamat"
                android:textSize="15sp" />
            <Spinner
                android:id="@+id/propoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:entries="@array/proparray"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp" />
            <Spinner
                android:id="@+id/kotaal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:hint="No.Hp (Telepon)"
                android:textSize="15sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:hint="Alamat Surat Elektronik (E-MAIL)"
                android:textSize="15sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="Nama Wali (Orang Tua)"
                android:textSize="15sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:hint="Alamat Wali (Orang Tua)"
                android:textSize="15sp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/spinwali"
                android:layout_marginStart="15dp"
                android:entries="@array/proparray"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/spinkotawali"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:hint="No.Hp (Telepon) Wali (Orang Tua)"
                android:textSize="15sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:text="Simpan"
                android:layout_marginRight="20dp"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"/>



        </LinearLayout>
    </LinearLayout>
</ScrollView>